--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -41,7 +41,7 @@
 				<TextBox Name="BorderFuncInput" Text="{Binding Path=WindowData.BorderFunc}"/>
 				<Button Content="Example" Click="ExampleClick"/>
 				<Button Content="Count" Click="CountClick" Name="CountBtn" IsEnabled="{Binding Path=IsReadyToCount}"/>
-				<Button Content="Save" Click="SaveClick"/>
+				<Button Content="Save" Click="SaveClick" IsEnabled="{Binding Path=IsReadyToSave}"/>
 				<Button Content="Load" Click="LoadClick"/>
 				<Button Content="Delete" Click="DeleteClick"/>
 				<ListBox Name="SavedResultsListBox" ItemsSource="{Binding Path=SavedResults}"/>
